[gd_scene load_steps=9 format=3 uid="uid://blggg6gw6laco"]

[ext_resource type="Script" path="res://scenes/ui/player_state/item_state_box.gd" id="1_piqqy"]
[ext_resource type="Texture2D" uid="uid://bbtpkw6qhg473" path="res://assets/textures/icons/open_box_button.png" id="2_4a8np"]
[ext_resource type="AudioStream" uid="uid://bxodhr4xud0hs" path="res://assets/sounds/button_down.mp3" id="4_b5uep"]

[sub_resource type="Animation" id="Animation_dlbs5"]
resource_name = "LeftEnter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Grid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-100, 36), Vector2(0, 36)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.5708]
}

[sub_resource type="Animation" id="Animation_bn1s7"]
resource_name = "LeftExit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Grid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 36), Vector2(-100, 36)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, 0.0]
}

[sub_resource type="Animation" id="Animation_ada31"]
resource_name = "RightEnter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Grid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(100, 36), Vector2(0, 36)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="Animation" id="Animation_k1t6b"]
resource_name = "RightExit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Grid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 36), Vector2(100, 36)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gcaim"]
_data = {
"LeftEnter": SubResource("Animation_dlbs5"),
"LeftExit": SubResource("Animation_bn1s7"),
"RightEnter": SubResource("Animation_ada31"),
"RightExit": SubResource("Animation_k1t6b")
}

[node name="ItemStateBox" type="Control"]
custom_minimum_size = Vector2(68, 0)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_piqqy")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_right = 30.0
offset_bottom = 30.0
pivot_offset = Vector2(15, 15)
focus_mode = 0
icon = ExtResource("2_4a8np")

[node name="Grid" type="GridContainer" parent="."]
layout_mode = 0
offset_top = 36.0
offset_right = 68.0
offset_bottom = 212.0
columns = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gcaim")
}

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_b5uep")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_play_button_hover_sound"]
